@@ -1,5 +1,10 @@
 2017-09-09  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_functions.js: 
+	Fix error message. "The context is either Document nor Element."
+	-> "The context is neither Document nor Element."
+	Define getOwnerDocument function.
+
 	* tryXpath/background/try_xpath_background.js:
 	Define genericListener.listeners.focusItemInTab function.
 
